# graphql-api-test-suite

./: .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
resources/schemas/: roleCreateOne.json
resources/test-data/: test_end_to_end.json  test_role_create_one.json  test_rollskill_overwrite.json
tests/: test_api.py  test_mutations.py
utils/: api_utils.py  call_api.py  data_validator.py  read_test_data.py  test_utils.py
